--- a/src/app/shared/ui-components/atoms/os-progress-bar/os-progress-bar.component.scss
+++ b/src/app/shared/ui-components/atoms/os-progress-bar/os-progress-bar.component.scss
@@ -1,4 +1,4 @@
-@import '../../theme/tokens';
+@use '../../theme/tokens';
 
 .os-progress-bar {
   width: 100%;
@@ -165,4 +165,3 @@
     opacity: 0.7;
   }
 }
-
