Adiciona o tema do Design System OrçaSonhos e remove paletas de cores antigas do tema Material. Atualiza o arquivo de estilos para incluir o novo tema e implementa personalizações de cores e estilos para botões, campos de formulário, cartões, diálogos e barras de notificação, garantindo suporte ao tema escuro.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,9 @@
 // custom components at https://material.angular.dev/guide/theming
 @use '@angular/material' as mat;
 
+// Import OrçaSonhos Design System theme
+@import './app/shared/ui-components/theme/theme.scss';
+
 html {
   @include mat.theme(
     (
