--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,7 +6,7 @@
 @use '@angular/material' as mat;
 
 // Import OrçaSonhos Design System theme
-@import './app/shared/ui-components/theme/theme.scss';
+@use './app/shared/ui-components/theme/theme.scss';
 
 html {
   @include mat.theme(
