--- a/src/app/shared/ui-components/theme/_variables.scss
+++ b/src/app/shared/ui-components/theme/_variables.scss
@@ -129,3 +129,9 @@ $shadow-large: $shadow-lg;
 $transition-fast: var(--os-transition-fast);
 $transition-normal: var(--os-transition-normal);
 $transition-slow: var(--os-transition-slow);
+
+// ===== BREAKPOINTS =====
+$breakpoint-mobile: 768px;
+$breakpoint-tablet: 1024px;
+$breakpoint-desktop: 1200px;
+$breakpoint-large: 1440px;
